--- a/assets/css/components/_hero-slider.scss
+++ b/assets/css/components/_hero-slider.scss
@@ -54,11 +54,7 @@
 
 .hero__header {
   padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: baseline;
+  text-align: center;
 }
 
 .hero__header--icon {
