--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -29,8 +29,7 @@
   background-image: linear-gradient(to right bottom, rgba(255,255,255,0.5), rgba(255,255,255,0.5)),url(../images/story_bg.jpg);
   background-position: bottom center;
   position: relative;
-  @extend .content-width;
-  // @extend .mb-lg;
+  @extend .mb-lg;
   border-bottom: $borderShadow;
 
 }
@@ -45,7 +44,6 @@
 
 .section-about {
   background: $cWhite;
-  @extend .content-width;
   // @extend .mb-lg;
 }
 
@@ -142,7 +140,7 @@
 ----------------------------------------------- */
 
 .aside {
-  flex-basis: 28%;
+  flex-basis: 30%;
 
   &--container {}
 
