--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $famicon: 'Press Start 2P', sans-serif;
 $kameron: "Kameron", "Noto Sans JP", sans-serif;
 
+/* color */
 $cWhite: white;
 $cBlack: black;
 $cGray: #eee;
