--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1501,7 +1501,13 @@ a:active {
 
 .hero__header {
   padding: 20px 0;
-  text-align: center;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .hero__header--icon {
@@ -1520,10 +1526,11 @@ a:active {
 }
 
 .hero__header--title {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 @media only screen and (max-width: 37.4em) {
