--- a/assets/css/components/_story.scss
+++ b/assets/css/components/_story.scss
@@ -2,46 +2,28 @@
   &__title {
     span {
       font-weight: bold;
-      font-size: 4rem;
+      font-size: 3rem;
       margin: 0;
-
       @include respondDown(phone) {
-        font-size: 3rem
+        font-size: 1rem
       }
     }
   }
 
   &__content {
     @extend .content-width;
-    padding: 25rem 0;
+    padding: 5rem 0;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
-
-
-    @include respondDown(tab-port) {
-      flex-direction: column-reverse;
-    }
   }
-
-  &__content:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-
   &__desc {
-    text-align: justify;
-    flex-basis: 48%;
+
   }
   &__gallery {
     position: relative;
-    flex-basis: 48%;
-
-    @include respondDown(tab-port) {
-      flex-basis: 100%;
-      margin-bottom: 10rem;
-    }
   }
 
   &__photo {
@@ -51,48 +33,33 @@
     z-index: 10;
     transition: all .2s;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    float: left;
+    position: relative;
+    width: 33.33333333%;
     @include respondDown(tab-port) {
-      float: left;
-      position: relative;
-      width: 33.33333333%;
+
   }
 
     &--1 {
-      left: 0%;
-      top: -2rem;
-
-      @include respondDown(tab-port)  {
-        top: 0;
-        transform: scale(1.2);
-    }
+      top: 0;
+      transform: scale(1.2);
     }
 
     &--2 {
-      right: 0%;
-      top: 2rem;
-
-      @include respondDown(tab-port) {
-        top: -1rem;
-        transform: scale(1.3);
-        z-index: 100;
-      }
+      top: -1rem;
+      transform: scale(1.3);
     }
 
     &--3 {
-      left: 20%;
-      top: 10rem;
+      top: 1rem;
+      left: 0;
+      transform: scale(1.1);
 
-      @include respondDown(tab-port) {
-        top: 1rem;
-        left: 0;
-        transform: scale(1.1);
-      }
     }
 
     &:hover {
-      transform: scale(1.25) translateY(-0.5rem);
-      z-index: 20;
+      transform: scale(1.5) translateY(-0.5rem);
+      z-index: 100;
     }
   }
 
@@ -137,14 +104,14 @@
   background-image: linear-gradient(to right bottom, $cGreen-1, $cGreen-2);
   clip-path: polygon(0 0, 0% 100%, 100% 0);
   text-align: left;
-  height: 180px;
-  width: 250px;
-  font-size: 1.5rem;
+  height: 100px;
+  width: 150px;
+  font-size: .5rem;
 
   position: absolute;
   top: 0;
   left: 0%;
-  // z-index: -1;
+  z-index: -1;
 }
 
 
