--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,7 +533,7 @@ a:active {
   margin-bottom: 32px !important;
 }
 
-.mb-lg, .wrapper, .section-story, .section-features {
+.mb-lg, .wrapper, .section-features {
   margin-bottom: 80px !important;
 }
 
@@ -1739,18 +1739,18 @@ a:active {
 
 .story__title span {
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 3rem;
   margin: 0;
 }
 
 @media only screen and (max-width: 37.4em) {
   .story__title span {
-    font-size: 3rem;
+    font-size: 1rem;
   }
 }
 
 .story__content {
-  padding: 25rem 0;
+  padding: 5rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1768,40 +1768,8 @@ a:active {
       flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 56.24em) {
-  .story__content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-  }
-}
-
-.story__content:nth-child(even) {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-}
-
-.story__desc {
-  text-align: justify;
-  -ms-flex-preferred-size: 48%;
-      flex-basis: 48%;
-}
-
 .story__gallery {
   position: relative;
-  -ms-flex-preferred-size: 48%;
-      flex-basis: 48%;
-}
-
-@media only screen and (max-width: 56.24em) {
-  .story__gallery {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    margin-bottom: 10rem;
-  }
 }
 
 .story__photo {
@@ -1813,61 +1781,34 @@ a:active {
   transition: all .2s;
   -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-@media only screen and (max-width: 56.24em) {
-  .story__photo {
-    float: left;
-    position: relative;
-    width: 33.33333333%;
-  }
+  float: left;
+  position: relative;
+  width: 33.33333333%;
 }
 
 .story__photo--1 {
-  left: 0%;
-  top: -2rem;
-}
-
-@media only screen and (max-width: 56.24em) {
-  .story__photo--1 {
-    top: 0;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
+  top: 0;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .story__photo--2 {
-  right: 0%;
-  top: 2rem;
-}
-
-@media only screen and (max-width: 56.24em) {
-  .story__photo--2 {
-    top: -1rem;
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    z-index: 100;
-  }
+  top: -1rem;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .story__photo--3 {
-  left: 20%;
-  top: 10rem;
-}
-
-@media only screen and (max-width: 56.24em) {
-  .story__photo--3 {
-    top: 1rem;
-    left: 0;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-  }
+  top: 1rem;
+  left: 0;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .story__photo:hover {
-  -webkit-transform: scale(1.25) translateY(-0.5rem);
-          transform: scale(1.25) translateY(-0.5rem);
-  z-index: 20;
+  -webkit-transform: scale(1.5) translateY(-0.5rem);
+          transform: scale(1.5) translateY(-0.5rem);
+  z-index: 100;
 }
 
 .story__footer {
@@ -1924,12 +1865,13 @@ a:active {
   -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
           clip-path: polygon(0 0, 0% 100%, 100% 0);
   text-align: left;
-  height: 180px;
-  width: 250px;
-  font-size: 1.5rem;
+  height: 100px;
+  width: 150px;
+  font-size: .5rem;
   position: absolute;
   top: 0;
   left: 0%;
+  z-index: -1;
 }
 
 .features {
@@ -2316,14 +2258,7 @@ min-width: 37.5em) / 600px UP
   HOME-SETION
 ----------------------------------------------- */
 .section-story {
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0.5))), url(../images/story_bg.jpg);
-  background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(../images/story_bg.jpg);
-  background-position: bottom center;
   position: relative;
-  border-bottom: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .section-features {
@@ -2446,7 +2381,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
 Stylesheet: 960px以上のモニタで適用
 
 ******************************************************************/
-  .mb-lg, .wrapper, .section-story, .section-features {
+  .mb-lg, .wrapper, .section-features {
     margin-bottom: 150px !important;
   }
   .pb-lg {
