--- a/assets/css/base/_utilities.scss
+++ b/assets/css/base/_utilities.scss
@@ -25,9 +25,15 @@
 .mb-lg {
   margin-bottom: 80px !important;
 }
+
 .pb-sm {
   padding-bottom: 16px !important;
 }
+
+.pb-md {
+  padding-bottom: 32px !important;
+}
+
 .pb-lg {
   padding-bottom: 80px !important;
 }
