--- a/assets/css/components/_search.scss
+++ b/assets/css/components/_search.scss
@@ -1,46 +1,64 @@
 .search {
-    margin-top: 10px;
-    flex-basis: 100%;
     position: relative;
     display: flex;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    // padding: 5px 5px 5px 11px;
-    &__input {
-        
-        width: 100%;
-        font-size: 16px;
-        background: $cBgGray;
-        border: none;
-        border-radius: 100px;
-        padding: .7rem 2rem;
-        // margin-right: -3.25rem;
-        &:focus {
-            outline: none;
-        }
+    // align-items: center;
+    flex-direction: column;
+  // padding: 5px 5px 5px 11px;
+
+  &__item {
+      @extend .pb-md;
+  }
+
+  &__label {
+    display: block;
+    font-weight: bold;
+     @extend .font-md;
+  }
+
+  &__input {
+      margin-top: 10px;
+    width: 100%;
+    font-size: 16px;
+    background: $cBgGray;
+    border: none;
+    border-radius: 100px;
+    padding: .7rem 2rem;
+
+    // margin-right: -3.25rem;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__message {
+    margin-top: 10px;
+      height: 200px;
+      background: $cBgGray;
+      width: 100%;
+      padding: 1rem;
+      @extend .font-md;
+  }
+
+  &__btn {
+    font-size: 1rem;
+    position: absolute;
+    right: 3%;
+    cursor: pointer;
+    border: none;
+    // background: $cWhite;
+
+    &:focus {
+      outline: none;
     }
 
-    &__btn {
-        font-size: 1rem;
-        position: absolute;
-        right: 3%;
-        cursor: pointer;
-        border: none;
-        // background: $cWhite;
-
-        &:focus {
-            outline: none;
-        }
-
-        &:active {
-            transform: translateY(2px);
-        }
+    &:active {
+      transform: translateY(2px);
     }
+  }
 
-    &__icon {
-        height: 20px;
-        width: 20px;
-        fill: $cBlack;
-    }
+  &__icon {
+    height: 20px;
+    width: 20px;
+    fill: $cBlack;
+  }
 }
