--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,11 +495,14 @@ a:active {
 
 .section-title {
   font-size: 3rem;
-  font-weight: normal;
 }
 
 .heading-primary {
   display: inline-block;
+  background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
   letter-spacing: .2rem;
   text-transform: uppercase;
 }
@@ -513,7 +516,7 @@ a:active {
   font-size: 1rem;
 }
 
-.font-md, .para-primary, .about__profile--para, .topic__preview--date, .news__text a, .modal__title, .features__box--paragraph, .header__logo, .aside--title {
+.font-md, .para-primary, .search__label, .search__message, .about__profile--para, .topic__preview--date, .news__text a, .modal__title, .features__box--paragraph, .header__logo, .aside--title {
   font-size: 1.2rem;
 }
 
@@ -541,6 +544,10 @@ a:active {
   padding-bottom: 16px !important;
 }
 
+.pb-md, .search__item {
+  padding-bottom: 32px !important;
+}
+
 .pb-lg {
   padding-bottom: 80px !important;
 }
@@ -552,7 +559,7 @@ a:active {
 .content-width, .modal, .story__content, .header__container, .footer__inner, .section-hero, .section-news {
   width: 90%;
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1200px;
 }
 
 .content-width-sm {
@@ -852,25 +859,23 @@ a:active {
 }
 
 .search {
-  margin-top: 10px;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.search__label {
+  display: block;
+  font-weight: bold;
 }
 
 .search__input {
+  margin-top: 10px;
   width: 100%;
   font-size: 16px;
   background: #eaebe6;
@@ -881,6 +886,14 @@ a:active {
 
 .search__input:focus {
   outline: none;
+}
+
+.search__message {
+  margin-top: 10px;
+  height: 200px;
+  background: #eaebe6;
+  width: 100%;
+  padding: 1rem;
 }
 
 .search__btn {
@@ -1932,7 +1945,7 @@ a:active {
 }
 
 .features::after {
-  content: "CONCEPT";
+  content: "SKILL";
   font-size: 3rem;
   color: black;
   font-weight: bold;
@@ -2263,11 +2276,11 @@ min-width: 37.5em) / 600px UP
 
 .section-features {
   color: white;
-  margin-top: -8vh;
   position: relative;
 }
 
 .section-about {
+  margin-top: 30px;
   background: white;
 }
 
@@ -2275,6 +2288,14 @@ min-width: 37.5em) / 600px UP
   position: relative;
   margin-bottom: 150px;
   color: black;
+}
+
+.section-form {
+  height: calc(100vh - 116px);
+  width: 90%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-top: 50px;
 }
 
 /* --------------------------------------------
